@@ -1,3 +1,7 @@
+2009-06-26  Badlop  <badlop@process-one.net>
+
+	* src/mod_ctlextra.erl: Fix load-config call return.
+
 2009-02-09  Badlop  <badlop@process-one.net>
 
 	* src/mod_ctlextra.erl: Calculation of 'stats registeredusers'
